--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,34 @@
+/* _____RESET/DEBUG RULES_____________ */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+/* _____HEADER_____________ */
 
+header{
+    background-color: orange;
+}
+header section{
+    /* background-color: lightcyan; */
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+section{
+    width: 80%;
+    margin: auto;
+}
+header .logo{
+    display: flex;
+    justify-content: center;
+}
+.logo>img{
+    width: 20%;
+}
+header span{
+    color: white;
+}
+.icon i{
+    padding: 5px;
+}
